[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="Player2" parent="." instance=ExtResource( 2 )]

[node name="Mob_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="score_timer" type="Timer" parent="."]

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start_position" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="Mob_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Mob_spawn_location" type="PathFollow2D" parent="Mob_path"]
[connection signal="hit" from="Player2" to="." method="game_over"]
[connection signal="timeout" from="Mob_timer" to="." method="_on_Mob_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="start_timer" to="." method="_on_start_timer_timeout"]
